# i80_controller

./: CMakeLists.txt  customCSV.csv  sdkconfig  sdkconfig.old
MySquareLine/: ESP32S3_UI.sll  ESP32S3_UI.spj
MySquareLine/WUI/ESP32S3_UI/: CMakeLists.txt
MySquareLine/WUI/ESP32S3_UI/main/: main.c
MySquareLine/WUI/ESP32S3_UI/main/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.h
MySquareLine/WUI/ESP32S3_UI/main/ui/components/: ui_comp_hook.c
MySquareLine/assets/: ui_font_AlimamaAgileVF.c  ui_font_AlimamaAgileVF.fcfg  ui_font_AlimamaAgileVFFangyuan40.fcfg  ui_font_LenovoHTC.c  ui_font_LenovoHTC.fcfg  ui_font_MiSansB40.c  ui_font_MiSansB40.fcfg  ui_font_MiSansM.fcfg  ui_font_MiSansN.c  ui_font_MiSansN.fcfg  ui_font_MiSansN14.c  ui_font_MiSansN14.fcfg  ui_font_symbols16.fcfg  ui_font_symbolsalibaba.fcfg  ui_font_symbolsalibaba16.fcfg
components/MPU6050/: CMakeLists.txt  mpu6050.c  mpu6050.h
components/WUI/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_helpers.c  ui_helpers.h
components/WUI/fonts/: ui_font_AlimamaAgileVFFangyuan40.c  ui_font_MiSansM.c  ui_font_symbolsalibaba16.c
components/WUI/images/: ui_img_1486146667.c  ui_img_316889752.c  ui_img_636766446.c
components/WUI/screens/: ui_Batinfo.c  ui_Home.c  ui_settings.c
components/bsp_sdCard/: CMakeLists.txt  bsp_sdCard.c  bsp_sdCard.h
components/customUi/: CMakeLists.txt  customUi.c
components/lvgl__lvgl/env_support/cmake/: esp.cmake
components/phoneui/: CMakeLists.txt  ui.c  ui.h
main/: CMakeLists.txt  bsp_power.c  i80_controller_example_main.c  lvgl_demo_ui.c
(+8 files in other folders)
